flint/capi.h

/// A tensor. Holds a shape and a reference to storage that other tensors may share.
typedef struct fl_tensor_impl_t *fl_tensor_t;
/// The operators of one device: the backend that computes, and what every operation below is
/// asked of rather than working it out from the tensors it was handed.
///
/// Made by fl_operators_create() and released by fl_operators_destroy(). The operators themselves
/// belong to the library and are shared by the whole process, so a second handle on the same
/// device makes no second backend and costs nothing; what a handle owns is a reference that keeps
/// them alive.
typedef struct fl_operators_impl_t *fl_operators_t;
typedef enum fl_dtype_t {
  FL_DTYPE_UNKNOWN = 0,
  FL_DTYPE_FLOAT = 1,
  FL_DTYPE_LONG = 2,
  FL_DTYPE_UINT8 = 3,
  FL_DTYPE_FLOAT16 = 4,
  FL_DTYPE_INT8 = 6,
  FL_DTYPE_FP4E2M0X2 = 7,
  FL_DTYPE_BOOL = 8,
  FL_DTYPE_INT32 = 9,
  FL_DTYPE_FP8E4M3 = 10,
} fl_dtype_t;
typedef enum fl_device_type_t {
  FL_DEVICE_CPU = 0,
  FL_DEVICE_CUDA = 1,
  /// Host memory page-locked by the CUDA driver. The CPU may read and write it, but it carries no
  /// operators: it is where weights wait to be copied to the GPU, not somewhere to compute.
  FL_DEVICE_CUDA_HOST = 2,
  FL_DEVICE_METAL = 3,
  /// Last, and one past the devices, so that adding one moves this and nothing else.
  FL_DEVICE_UNKNOWN = 4,
} fl_device_type_t;
/// Scaled dot product attention. `q` is <float>(N, nHead, L, D) and `k` and `v` are
/// <float>(N, nKvHead, S, D), where nKvHead may divide nHead for grouped-query attention.
/// `causal` masks the future positions, aligned to the bottom right of the score matrix.
FLAPI int32_t fl_attention(
    fl_operators_t operators,
    fl_tensor_t q,
    fl_tensor_t k,
    fl_tensor_t v,
    int32_t causal,
    fl_tensor_t *out);
/// @param q <float>(totalQLen, nHead, D): the queries of every sequence, packed back to back.
/// @param key_cache <float>(nBlock, blockSize, nKvHead, D): the key block pool.
/// @param value_cache <float>(nBlock, blockSize, nKvHead, D): the value block pool.
/// @param block_table <int>(nSeq, maxNumBlock): the blocks each sequence owns, in token order.
/// @param cu_seqlens_q <int>(nSeq + 1): exclusive prefix sum of the query lengths.
/// @param seqlens_k <int>(nSeq): the number of cached tokens each sequence attends to.
FLAPI int32_t fl_paged_attention(
    fl_operators_t operators,
    fl_tensor_t q,
    fl_tensor_t key_cache,
    fl_tensor_t value_cache,
    fl_tensor_t block_table,
    fl_tensor_t cu_seqlens_q,
    fl_tensor_t seqlens_k,
    int32_t max_q_len,
    int32_t max_k_len,
    int32_t causal,
    fl_tensor_t *out);
/// Scatter the keys and values of a forward pass into a paged KV cache, so that a later
/// fl_paged_attention() reads them back. `key_cache` and `value_cache` are written in place, and
/// `slot_mapping` is <int>(numTokens) holding blockId * blockSize + offset per token.
FLAPI int32_t fl_store_kv_cache(
    fl_operators_t operators,
    fl_tensor_t k,
    fl_tensor_t v,
    fl_tensor_t key_cache,
    fl_tensor_t value_cache,
    fl_tensor_t slot_mapping);
/// Sample one label per row of `logits` <float>(rows, vocabSize) with per-row parameters:
/// `temperatures` and `top_ps` are <float>(rows) and `top_ks` is <int>(rows). A temperature of 0
/// selects greedily and a top-k of 0 or less keeps every label.
FLAPI int32_t fl_sample_with_params(
    fl_operators_t operators,
    fl_tensor_t logits,
    fl_tensor_t temperatures,
    fl_tensor_t top_ks,
    fl_tensor_t top_ps,
    fl_tensor_t *out);
/// Divide the logits of the tokens in `history` <long>(N, historyLen) by `weight`, penalizing the
/// ones already generated. `logits` <float>(N, vocabSize) is written in place.
FLAPI int32_t fl_repetition_penalty(
    fl_operators_t operators,
    fl_tensor_t logits,
    fl_tensor_t history,
    float weight);
/// Copy the elements of `src` into `dest`, which must have the same shape.
///
/// `operators` must be able to reach both ends: the CPU's for two tensors in host memory, whoever
/// page-locked it, and the device's own for two of its. This does not cross the bus -- that is
/// fl_tensor_to_device().
FLAPI int32_t fl_copy(fl_operators_t operators, fl_tensor_t src, fl_tensor_t dest);
/// Fill every element of `tensor` with `value`, in place.
FLAPI int32_t fl_fill(fl_operators_t operators, fl_tensor_t tensor, float value);
/// Whether every pair of elements is within `rtol` relative and `atol` absolute tolerance.
FLAPI int32_t fl_all_close(
    fl_operators_t operators,
    fl_tensor_t a,
    fl_tensor_t b,
    float rtol,
    float atol,
    int32_t *out);
/// Whether every element of a <bool> tensor is true.
FLAPI int32_t fl_all(fl_operators_t operators, fl_tensor_t tensor, int32_t *out);
/// The single element of a one-element tensor, as a float.
FLAPI int32_t fl_elem(fl_operators_t operators, fl_tensor_t tensor, float *out);
/// The float type these operators work in by default.
FLAPI int32_t fl_get_default_float_type(fl_operators_t operators, fl_dtype_t *out);
/// Print the tensor to stdout.
FLAPI int32_t fl_print(fl_operators_t operators, fl_tensor_t tensor);
/// The memory usage of one device. A device that does not report its usage, which is what the CPU
/// backend does, reports zero for every field.
typedef struct fl_memory_snapshot_t {
  int64_t total;
  int64_t free;
  int64_t allocated;
  int64_t peak_allocated;
} fl_memory_snapshot_t;
/// Measure the memory usage of `device`.
FLAPI int32_t fl_memory_capture(fl_device_type_t device, fl_memory_snapshot_t *out);
/// Set the peak allocated bytes of `device` back to zero, so that the next measurement covers only
/// what happens from here.
FLAPI int32_t fl_memory_reset_peak_stats(fl_device_type_t device);
/// Give every byte of `device` that no tensor is using back to the driver, so that another process
/// may have it. A device whose allocator hands memory back as each tensor goes does nothing. Worth
/// calling only where something large has just been let go of and nothing is about to ask for it
/// again -- a model taken off the card -- since it hands back the blocks the next allocation would
/// otherwise have reused.
FLAPI int32_t fl_memory_release_unused(fl_device_type_t device);
/// What fl_set_fatal_handler() registers.
typedef void (*fl_fatal_handler_t)(void);
/// Register `handler` to run just before the library ends the process.
///
/// Little does. A check that fails inside an operator -- two tensors on different devices meeting
/// at a convolution, a shape no kernel was written for -- comes back as FL_ERROR_ABORTED with the
/// message, so a broken invariant reaches a caller the same way a bad argument does. What is left
/// is the path with nothing to report to: reaching code that was never written, where there is no
/// call still standing to return a code to.
///
/// That one prints what went wrong and calls abort(), and the message lands on top of whatever a
/// caller that owns the screen had drawn. This runs first, before anything is printed, which is
/// that caller's one chance to give the screen back.
///
/// It runs on whichever thread failed, and the process is going down either way, so it should do
/// the one thing it is there for and return. Passing NULL clears it.
FLAPI void fl_set_fatal_handler(fl_fatal_handler_t handler);