waifu/src/flint/ffi.rs


    pub fn fl_attention(
        operators: FlOperators,
        q: FlTensor,
        k: FlTensor,
        v: FlTensor,
        causal: i32,
        out: *mut FlTensor,
    ) -> i32;
    pub fn fl_paged_attention(
        operators: FlOperators,
        q: FlTensor,
        key_cache: FlTensor,
        value_cache: FlTensor,
        block_table: FlTensor,
        cu_seqlens_q: FlTensor,
        seqlens_k: FlTensor,
        max_q_len: i32,
        max_k_len: i32,
        causal: i32,
        out: *mut FlTensor,
    ) -> i32;
    pub fn fl_store_kv_cache(
        operators: FlOperators,
        k: FlTensor,
        v: FlTensor,
        key_cache: FlTensor,
        value_cache: FlTensor,
        slot_mapping: FlTensor,
    ) -> i32;

    pub fn fl_sample_with_params(
        operators: FlOperators,
        logits: FlTensor,
        temperatures: FlTensor,
        top_ks: FlTensor,
        top_ps: FlTensor,
        out: *mut FlTensor,
    ) -> i32;
    pub fn fl_repetition_penalty(
        operators: FlOperators,
        logits: FlTensor,
        history: FlTensor,
        weight: f32,
    ) -> i32;

    pub fn fl_copy(operators: FlOperators, src: FlTensor, dest: FlTensor) -> i32;
    pub fn fl_fill(operators: FlOperators, tensor: FlTensor, value: f32) -> i32;
    pub fn fl_all_close(
        operators: FlOperators,
        a: FlTensor,
        b: FlTensor,
        rtol: f32,
        atol: f32,
        out: *mut i32,
    ) -> i32;
    pub fn fl_all(operators: FlOperators, tensor: FlTensor, out: *mut i32) -> i32;
    pub fn fl_elem(operators: FlOperators, tensor: FlTensor, out: *mut f32) -> i32;
    pub fn fl_get_default_float_type(operators: FlOperators, out: *mut FlDType) -> i32;
    pub fn fl_print(operators: FlOperators, tensor: FlTensor) -> i32;

    pub fn fl_memory_capture(device: FlDeviceType, out: *mut FlMemorySnapshot) -> i32;
    pub fn fl_memory_reset_peak_stats(device: FlDeviceType) -> i32;
    pub fn fl_memory_release_unused(device: FlDeviceType) -> i32;
    pub fn fl_set_fatal_handler(handler: Option<extern "C" fn()>);
}

/// Mirrors `fl_memory_snapshot_t`.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default)]
pub struct FlMemorySnapshot {
    pub total: i64,
    pub free: i64,
    pub allocated: i64,
    pub peak_allocated: i64,
}
